--- a/lib/flamegraph/ui/package.json
+++ b/lib/flamegraph/ui/package.json
@@ -11,7 +11,10 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "css-loader": "^1.0.1",
+    "file-loader": "^2.0.0",
     "html-webpack-plugin": "^3.2.0",
+    "style-loader": "^0.23.1",
     "webpack": "^4.26.1",
     "webpack-cli": "^3.1.2",
     "webpack-dev-server": "^3.1.10",
@@ -22,6 +25,7 @@
     "d3": "^3.5.17",
     "jquery": "^1.9.1",
     "lodash": "^1.3.1",
-    "randomcolor": "^0.5.3"
+    "randomcolor": "^0.5.3",
+    "semantic-ui-css": "^2.4.1"
   }
 }
